      (closes: #488928).

  [ Sandro Tosi ]
  * reportbuglib/reportbug.py, reportbug
    - reports status of suggested packages; thanks to Ari Pollak for the
      report; Closes: #441056
  * reportbug
    - fixed packages list generation for a file search if run not in a tty (or
      via --template); thanks to Dan Jacobson for the report; Closes: #489515

 -- Sandro Tosi <matrixhasu@gmail.com>  Sun, 06 Jul 2008 17:56:38 +0200

reportbug (3.42) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/control
    - bump Standards-Version to 3.8.0 (no changes needed)
  * checks/compare_pseudo-pkgs_lists.py
    - updated ftp-master url (previous was on brz, but ftp-master moved to
      git and there is no web file access)
  * reportbug
    - do not ask for additional tags if the user is filing a bug against
      ftp.debian.org; thanks to Bernd Zeimetz for the report; Closes: #486753
    - all fields of ITP bugs must contain valid data and not template lines;
      thanks to Adeodato Simó for the bug report; Closes: #293361
  * README.Users
    - added to contain suggestions or some info helpful to users
  * checks/compare_pseudo-pkgs_lists.py
    - updated due to new reportbuglib format

  [ Sandro Tosi, Ben Finney ]
  * reportbug
    - Changed shebang to Debian standard "/usr/bin/python", removing "-S"
      parameter. Now urwid is imported; thanks to Neil Mayhew for the hint.
      (Closes: #484534)

  [ Ben Finney ]
  * reportbug
  * querybts
  * script
    - Standardise all Python programs to same shebang line as per Debian
      Python policy §1.3.2.
  * reportbug_submit.py
  * checks/compare_pseudo-pkgs_lists.py
    - Remove shebang line from non-executable modules.
  * Tidy up imports.
    - reportbug, querybts, *.py
      - Remove redundant imports.
      - Import names explicitly.
      - Use '__import__' for importing dynamically-named modules,
        instead of 'exec' + 'eval'.
    - reportbug_submit.py
      - Don't munge sys.path unnecessarily.